# partial_struct

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs
tests/: partial_macro.rs
